--- a/pre-build/scss/common/media.scss
+++ b/pre-build/scss/common/media.scss
@@ -1,3 +1,5 @@
+@import '../common/variable.scss';
+
 @media screen and (max-width:1280px){
     .titleH1{font-size: 28px;}
     .titleH2{font-size: 20px;}
