--- a/pre-build/scss/scss-build/footer.css
+++ b/pre-build/scss/scss-build/footer.css
@@ -29,7 +29,7 @@
 }
 
 .wrap.pre.footerBasic #footer > .inner {
-  padding-top: 40px;
+  padding: 40px;
   max-width: 1200px;
   margin: 0 auto;
 }
@@ -111,7 +111,7 @@
 }
 
 .wrap.pre.footerFixed #footer > .inner {
-  padding-top: 40px;
+  padding: 40px;
   max-width: 1200px;
   margin: 0 auto;
 }
