--- a/pre-build/scss/component/footer.scss
+++ b/pre-build/scss/component/footer.scss
@@ -8,7 +8,7 @@
           span{position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);}
         }
         #footer{width: 100%; background-color: #292a2d;
-          >.inner{padding-top: 40px; max-width: 1200px; margin: 0 auto;
+          >.inner{padding: 40px; max-width: 1200px; margin: 0 auto;
             .logoArea{margin-bottom: 20px;
               a{display: inline-block;}
               img{width: 200px;}
@@ -35,7 +35,7 @@
     
     &.footerFixed{position: relative; width: 100%; height: 100%;
         #footer{position: absolute; bottom: 0; width: 100%; background-color: #292a2d;
-            >.inner{padding-top: 40px; max-width: 1200px; margin: 0 auto;
+            >.inner{padding: 40px; max-width: 1200px; margin: 0 auto;
                 .logoArea{margin-bottom: 20px;
                     a{display: inline-block;}
                     img{width: 200px;}
