--- a/pre-build/scss/scss-build/gnb.css
+++ b/pre-build/scss/scss-build/gnb.css
@@ -1,7 +1,7 @@
 /* text color */
 /* background */
 .wrap.pre.gnbHover .container, .wrap.pre.gnb-li-hover .container, .wrap.pre.gnbFind .container {
-  width: 1200px;
+  max-width: 1200px;
   margin: 0 auto;
   padding-top: 60px;
 }
