--- a/pre-build/scss/common/component.scss
+++ b/pre-build/scss/common/component.scss
@@ -364,14 +364,6 @@ word-break: break-all !important;}
       }
     }
   }
-  &.cScroll{overflow: auto; scrollbar-width: thin;scrollbar-color:#303030 transparent;
-    &::-webkit-scrollbar { width: 10px;height:10px; }   
-    &::-webkit-scrollbar-button { display: none; }   
-    &::-webkit-scrollbar-track { background-color:#e9e9e9; }  
-    &::-webkit-scrollbar-thumb { background: #ccc;border-radius:5px; } 
-    &::-webkit-scrollbar-thumb:hover { background: #b6b6b6; } 
-    &::-webkit-scrollbar-thumb:active { background: #808080; }
-  }
 }
 
 // update page list
@@ -445,10 +437,12 @@ word-break: break-all !important;}
     &.r20{right: 20px;}
   }
   &.fixed{position: fixed;}
+  &::-webkit-scrollbar-thumb{background-color: rgba($color: $whiteBg, $alpha: 0.85);}
+  &::-webkit-scrollbar-track {background-color: $_222Bg;}  
 }
 
 #toast{display: none; position: fixed; top: 120px; left: 50%; transform: translateX(-50%); 
-width: 290px; padding: 12px; box-sizing: border-box; border-radius: 4px; z-index: 9999;
+width: 290px; padding: 12px; box-sizing: border-box; border-radius: 4px; z-index: 10000;
 background-color: rgba($color: $blackBg, $alpha: 0.65);
   span{display: inline-block; text-align: center; font-size: 14px; color: $cfff; font-family: '맑은 고딕';}
 }
@@ -460,7 +454,6 @@ i.ico{display: inline-block; background-repeat: no-repeat; background-position: 
   &.download-w{width: 48px; height: 48px; background-image: url("../../images/ico/ico-download-w.png");}
   &.bookMark-w{width: 48px; height: 48px; background-image: url("../../images/ico/ico-bookMark-w.png");}
   &.github-w{width: 48px; height: 48px; background-image: url("../../images/ico/ico-github-w.png");}
-
   &.wide40{background-size: 40px 40px; background-position: center 8px;}
   &.wide32{background-size: 32px 32px; background-position: center 11px;}
   &.center{display: block; margin: 0 auto;}
@@ -477,3 +470,4 @@ i.ico{display: inline-block; background-repeat: no-repeat; background-position: 
 @import '../component/etc.scss';
 @import '../component/tooltip.scss';
 @import '../common/media.scss';
+@import '../common/mixin.scss';
