--- a/pre-build/scss/component/custom.scss
+++ b/pre-build/scss/component/custom.scss
@@ -1,13 +1,5 @@
 @import '../common/variable.scss';
-
-.cScroll{overflow-y:auto;overflow-x:hidden;scrollbar-width: thin;scrollbar-color:#303030 transparent;
-    &::-webkit-scrollbar { width: 10px;height:10px; }   
-    &::-webkit-scrollbar-button { display: none; }   
-    &::-webkit-scrollbar-track { background-color:#e9e9e9; }  
-    &::-webkit-scrollbar-thumb { background: $c-ccc;border-radius:5px; } 
-    &::-webkit-scrollbar-thumb:hover { background: #b6b6b6; } 
-    &::-webkit-scrollbar-thumb:active { background: #808080; }   
-}
+@import '../common/mixin.scss';
 
 .mouseMenu{display:none; position:absolute; z-index:10000; padding:10px 0;border:1px solid $c-ccc;
 border-radius:4px; background:#f5f5f5;
