--- a/pre-build/scss/component/gnb.scss
+++ b/pre-build/scss/component/gnb.scss
@@ -2,7 +2,7 @@
 
 .wrap.pre{
     &.gnbHover,&.gnb-li-hover,&.gnbFind{
-        .container{width: 1200px; margin: 0 auto; padding-top: 60px;}
+        .container{max-width: 1200px; margin: 0 auto; padding-top: 60px;}
         #gnb{width: 100%;
             #menuBg{display: none; position: absolute; left: 0; top: 120px; width: 100%; height:365px; border-top: 1px solid $dddBg;
             box-shadow:-3px 3px 3px 0 rgba(0, 0, 0, 0.2); background-color: $whiteBg; z-index: 1000;}
