--- a/pre-build/scss/scss-build/component.css
+++ b/pre-build/scss/scss-build/component.css
@@ -1109,38 +1109,6 @@ code[class*=language-], pre[class*=language-] pre {
   background-color: #f7e018 !important;
 }
 
-.highlightArea.cScroll {
-  overflow: auto;
-  scrollbar-width: thin;
-  scrollbar-color: #303030 transparent;
-}
-
-.highlightArea.cScroll::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
-}
-
-.highlightArea.cScroll::-webkit-scrollbar-button {
-  display: none;
-}
-
-.highlightArea.cScroll::-webkit-scrollbar-track {
-  background-color: #e9e9e9;
-}
-
-.highlightArea.cScroll::-webkit-scrollbar-thumb {
-  background: #ccc;
-  border-radius: 5px;
-}
-
-.highlightArea.cScroll::-webkit-scrollbar-thumb:hover {
-  background: #b6b6b6;
-}
-
-.highlightArea.cScroll::-webkit-scrollbar-thumb:active {
-  background: #808080;
-}
-
 .boardList {
   margin-top: 40px;
 }
@@ -1393,6 +1361,14 @@ code[class*=language-], pre[class*=language-] pre {
   position: fixed;
 }
 
+#frameBody::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.85);
+}
+
+#frameBody::-webkit-scrollbar-track {
+  background-color: #222;
+}
+
 #toast {
   display: none;
   position: fixed;
@@ -1405,7 +1381,7 @@ code[class*=language-], pre[class*=language-] pre {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 4px;
-  z-index: 9999;
+  z-index: 10000;
   background-color: rgba(0, 0, 0, 0.65);
 }
 
@@ -1587,7 +1563,7 @@ i.ico.center {
 /* text color */
 /* background */
 .wrap.pre.gnbHover .container, .wrap.pre.gnb-li-hover .container, .wrap.pre.gnbFind .container {
-  width: 1200px;
+  max-width: 1200px;
   margin: 0 auto;
   padding-top: 60px;
 }
@@ -1944,7 +1920,7 @@ i.ico.center {
 }
 
 .wrap.pre.bgImage .resultCont.type01 .imgDiv {
-  background-size: cover;
+  background-size: 100% 100%;
 }
 
 .wrap.pre.bgImage .resultCont.type02 .imgDiv {
@@ -2788,37 +2764,54 @@ input[type="image"], input[type="color"], input[type="button"] {
 
 /* text color */
 /* background */
-.cScroll {
-  overflow-y: auto;
-  overflow-x: hidden;
+/* text color */
+/* background */
+/* mixin */
+:where(body, .cScroll, #frameBody, .resultArea .inner .exBox) {
+  overflow: auto;
   scrollbar-width: thin;
   scrollbar-color: #303030 transparent;
 }
 
-.cScroll::-webkit-scrollbar {
+:where(body, .cScroll, #frameBody, .resultArea .inner .exBox)::-webkit-scrollbar {
   width: 10px;
   height: 10px;
 }
 
-.cScroll::-webkit-scrollbar-button {
+:where(body, .cScroll, #frameBody, .resultArea .inner .exBox)::-webkit-scrollbar-button {
   display: none;
 }
 
-.cScroll::-webkit-scrollbar-track {
+:where(body, .cScroll, #frameBody, .resultArea .inner .exBox)::-webkit-scrollbar-track {
   background-color: #e9e9e9;
 }
 
-.cScroll::-webkit-scrollbar-thumb {
+:where(body, .cScroll, #frameBody, .resultArea .inner .exBox)::-webkit-scrollbar-thumb {
   background: #ccc;
   border-radius: 5px;
 }
 
-.cScroll::-webkit-scrollbar-thumb:hover {
+:where(body, .cScroll, #frameBody, .resultArea .inner .exBox)::-webkit-scrollbar-thumb:hover {
   background: #b6b6b6;
 }
 
-.cScroll::-webkit-scrollbar-thumb:active {
+:where(body, .cScroll, #frameBody, .resultArea .inner .exBox)::-webkit-scrollbar-thumb:active {
   background: #808080;
+}
+
+::-moz-selection {
+  color: #fff;
+  background-color: rgba(38, 147, 204, 0.5);
+}
+
+::selection {
+  color: #fff;
+  background-color: rgba(38, 147, 204, 0.5);
+}
+
+::-moz-selection {
+  color: #fff;
+  background-color: rgba(38, 147, 204, 0.5);
 }
 
 .mouseMenu {
@@ -3031,6 +3024,9 @@ input[type="image"], input[type="color"], input[type="button"] {
   .leftArea .leftMenu > li ul.leftSubMenu li > a {
     font-size: 16px;
   }
+  .wrap.pre.gnbHover .container, .wrap.pre.gnb-li-hover .container, .wrap.pre.gnbFind .container {
+    margin: 0 40px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -3091,9 +3087,6 @@ input[type="image"], input[type="color"], input[type="button"] {
     width: 34px;
     height: 34px;
   }
-  .headArea > .inner .topArea {
-    display: none !important;
-  }
   .headArea > .inner .moreArea {
     display: block;
   }
@@ -3111,11 +3104,17 @@ input[type="image"], input[type="color"], input[type="button"] {
     padding: 85px 0 20px 0;
     margin: 0 24px;
   }
-  .rightArea .inner {
+  .rightArea > .inner {
     padding: 0;
   }
   .rightArea .mainTxt {
     font-size: 14px;
+  }
+  .resultArea > .inner {
+    padding: 10px;
+  }
+  .topArea {
+    display: none !important;
   }
   .innerTxt > strong {
     font-size: 18px;
@@ -3196,7 +3195,7 @@ input[type="image"], input[type="color"], input[type="button"] {
     font-size: 14px;
   }
   .wrap.pre.gnbFind #gnb ul.menuList li {
-    min-width: auto;
+    min-width: 90px;
   }
 }
 
@@ -3310,5 +3309,55 @@ input[type="image"], input[type="color"], input[type="button"] {
   .pager .lastPage:hover:not(.disabled) {
     background: url("../../images/ico/ico-pagi-last-hover.png") no-repeat center;
   }
+}
+
+/* text color */
+/* background */
+/* mixin */
+:where(body, .cScroll, #frameBody, .resultArea .inner .exBox) {
+  overflow: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #303030 transparent;
+}
+
+:where(body, .cScroll, #frameBody, .resultArea .inner .exBox)::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+:where(body, .cScroll, #frameBody, .resultArea .inner .exBox)::-webkit-scrollbar-button {
+  display: none;
+}
+
+:where(body, .cScroll, #frameBody, .resultArea .inner .exBox)::-webkit-scrollbar-track {
+  background-color: #e9e9e9;
+}
+
+:where(body, .cScroll, #frameBody, .resultArea .inner .exBox)::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 5px;
+}
+
+:where(body, .cScroll, #frameBody, .resultArea .inner .exBox)::-webkit-scrollbar-thumb:hover {
+  background: #b6b6b6;
+}
+
+:where(body, .cScroll, #frameBody, .resultArea .inner .exBox)::-webkit-scrollbar-thumb:active {
+  background: #808080;
+}
+
+::-moz-selection {
+  color: #fff;
+  background-color: rgba(38, 147, 204, 0.5);
+}
+
+::selection {
+  color: #fff;
+  background-color: rgba(38, 147, 204, 0.5);
+}
+
+::-moz-selection {
+  color: #fff;
+  background-color: rgba(38, 147, 204, 0.5);
 }
 /*# sourceMappingURL=component.css.map */
