--- a/pre-build/scss/scss-build/custom.css
+++ b/pre-build/scss/scss-build/custom.css
@@ -1,36 +1,53 @@
 /* text color */
 /* background */
-.cScroll {
-  overflow-y: auto;
-  overflow-x: hidden;
+/* text color */
+/* background */
+/* mixin */
+:where(body, .cScroll, #frameBody) {
+  overflow: auto;
   scrollbar-width: thin;
   scrollbar-color: #303030 transparent;
 }
 
-.cScroll::-webkit-scrollbar {
+:where(body, .cScroll, #frameBody)::-webkit-scrollbar {
   width: 10px;
   height: 10px;
 }
 
-.cScroll::-webkit-scrollbar-button {
+:where(body, .cScroll, #frameBody)::-webkit-scrollbar-button {
   display: none;
 }
 
-.cScroll::-webkit-scrollbar-track {
+:where(body, .cScroll, #frameBody)::-webkit-scrollbar-track {
   background-color: #e9e9e9;
 }
 
-.cScroll::-webkit-scrollbar-thumb {
+:where(body, .cScroll, #frameBody)::-webkit-scrollbar-thumb {
   background: #ccc;
   border-radius: 5px;
 }
 
-.cScroll::-webkit-scrollbar-thumb:hover {
+:where(body, .cScroll, #frameBody)::-webkit-scrollbar-thumb:hover {
   background: #b6b6b6;
 }
 
-.cScroll::-webkit-scrollbar-thumb:active {
+:where(body, .cScroll, #frameBody)::-webkit-scrollbar-thumb:active {
   background: #808080;
+}
+
+::-moz-selection {
+  color: #fff;
+  background-color: rgba(38, 147, 204, 0.5);
+}
+
+::selection {
+  color: #fff;
+  background-color: rgba(38, 147, 204, 0.5);
+}
+
+::-moz-selection {
+  color: #fff;
+  background-color: rgba(38, 147, 204, 0.5);
 }
 
 .mouseMenu {
