--- a/pre-build/scss/common/component.scss
+++ b/pre-build/scss/common/component.scss
@@ -290,9 +290,31 @@ padding: 92px 0; z-index:950;
 
 .popup{display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 9999;
 box-shadow: 0px 0px 8px rgba($color: $blackBg, $alpha: 0.35);
-  &.share{width: 350px;
+  &.share,&.mobileResult{width: 350px;
     .cont{border-radius: 4px; text-align: center;
       .inner{padding: 20px;}
+    }
+  }
+  &.mobileResult{width: 400px;
+    .cont{
+      .inner{border-bottom: 1px solid $dddBg;
+        strong{font-size: 18px; font-family: $d-fz;
+          +p{margin-top: 8px;}
+        }
+        p:last-of-type{margin-top: 5px; font-size: 13px;}
+      }
+    }
+    .btnArea{width: 100%;
+      button{flex: 0.5; height: 50px; border-right: 1px solid $dddBg;
+        &:last-child{border-right: 0;}
+        &.btnConfirm{
+          span{color: #1886F3;}
+        }
+        &.btnCancel{
+          span{color: #E60A2F;}
+        }
+        span{display: block; line-height: 50px; font-family: $d-fz; font-weight: bold;}
+      }
     }
   }
   .head{background-color: $whiteBg;
@@ -437,8 +459,8 @@ word-break: break-all !important;}
     &.r20{right: 20px;}
   }
   &.fixed{position: fixed;}
-  &::-webkit-scrollbar-thumb{background-color: rgba($color: $whiteBg, $alpha: 0.85);}
-  &::-webkit-scrollbar-track {background-color: $_222Bg;}  
+  &.show{display: block;}
+  &.hide{display: none;}
 }
 
 #toast{display: none; position: fixed; top: 120px; left: 50%; transform: translateX(-50%); 
@@ -459,6 +481,31 @@ i.ico{display: inline-block; background-repeat: no-repeat; background-position: 
   &.center{display: block; margin: 0 auto;}
 }
 
+/* mixin */
+@mixin bodyScrollbar($thumb,$track) {overflow: auto; scrollbar-width: thin;scrollbar-color:#303030 transparent;
+  &::-webkit-scrollbar { width: 10px;height:10px; }   
+  &::-webkit-scrollbar-button { display: none; }   
+  &::-webkit-scrollbar-track { background-color: $track; }  
+  &::-webkit-scrollbar-thumb { background: $thumb; border-radius:5px; } 
+  &::-webkit-scrollbar-thumb:hover { background: #b6b6b6; } 
+  &::-webkit-scrollbar-thumb:active { background: #808080; }
+}
+
+:where(body,.cScroll,#frameBody,.resultArea .inner .exBox){
+  @include bodyScrollbar($cccBg,#e9e9e9);
+}
+
+#frameBody{
+  @include bodyScrollbar(rgba($color: $whiteBg, $alpha: 0.85), $_222Bg)
+}
+
+@mixin bodyDrag{
+  ::selection{color: $cfff; background-color: rgba($color: #2693cc, $alpha: 0.5);}
+  ::-moz-selection{color: $cfff; background-color: rgba($color: #2693cc, $alpha: 0.5);}
+}
+
+@include bodyDrag();
+
 /* import */
 @import '../component/header.scss';
 @import '../component/gnb.scss'; 
@@ -470,4 +517,3 @@ i.ico{display: inline-block; background-repeat: no-repeat; background-position: 
 @import '../component/etc.scss';
 @import '../component/tooltip.scss';
 @import '../common/media.scss';
-@import '../common/mixin.scss';
