--- a/pre-build/scss/scss-build/component.css
+++ b/pre-build/scss/scss-build/component.css
@@ -918,7 +918,9 @@ pre {
 }
 
 .popup.mobileResult {
-  width: 400px;
+  min-width: 300px;
+  max-width: 500px;
+  width: auto;
 }
 
 .popup.mobileResult .cont .inner {
@@ -937,6 +939,27 @@ pre {
 .popup.mobileResult .cont .inner p:last-of-type {
   margin-top: 5px;
   font-size: 13px;
+}
+
+.popup.mobileResult .cont .inner .todayClose {
+  margin-top: 10px;
+}
+
+.popup.mobileResult .cont .inner .todayClose label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.popup.mobileResult .cont .inner .todayClose label span {
+  font-size: 14px;
+  font-family: 'Noto Sans';
 }
 
 .popup.mobileResult .btnArea {
@@ -1410,8 +1433,29 @@ code[class*=language-], pre[class*=language-] pre {
   right: 20px;
 }
 
-#frameBody.fixed {
+#frameBody .gifCont {
+  display: none;
   position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 9990;
+}
+
+#frameBody .gifCont .gifArea {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 5px 2px rgba(255, 255, 255, 0.2);
+          box-shadow: 0 0 5px 2px rgba(255, 255, 255, 0.2);
+}
+
+#frameBody .gifCont .gifArea > img {
+  display: block;
+  border-radius: inherit;
 }
 
 #frameBody.show {
@@ -3267,6 +3311,9 @@ input[type="image"], input[type="color"], input[type="button"] {
     padding: 0 5px !important;
     font-size: 11px !important;
   }
+  .wrap.pre > .container {
+    display: none;
+  }
   .wrap.pre.gnbHover .container, .wrap.pre.gnb-li-hover .container, .wrap.pre.gnbFind .container {
     width: auto;
     padding: 60px 20px 0 20px;
@@ -3279,6 +3326,9 @@ input[type="image"], input[type="color"], input[type="button"] {
   }
   .wrap.pre.gnbFind #gnb ul.menuList li {
     min-width: 90px;
+  }
+  .wrap.pre .gifCont .gifArea > img {
+    width: 90vw;
   }
 }
 
